# legged_rl

./: .clang-format  README.md
legged_rl_controllers/: CMakeLists.txt  amp_controller_plugins.xml  biped_controller_plugins.xml  biped_vision_controller_plugins.xml  legged_rl_controllers_plugins.xml  package.xml  parkour_controller_plugins.xml  student_policy_controller_plugins.xml  trot_controller_plugins.xml
legged_rl_controllers/config/: a1_amp.yaml  a1_config.yaml  a1_parkour.yaml  a1_student_policy.yaml  a1_trot_config.yaml  biped_config.yaml  biped_vision_config.yaml  controllers.yaml  lite3_student_policy.yaml
legged_rl_controllers/include/legged_rl_controllers/: AmpController.h  BipedController.h  BipedVisionController.h  LeggedRLController.h  ParkourController.h  RLControllerBase.h  StudentPolicyController.h  TrotController.h
legged_rl_controllers/launch/: load_amp_controller.launch  load_biped_controller.launch  load_biped_vision_controller.launch  load_controller.launch  load_legged_rl_controller.launch  load_parkour_controller.launch  load_student_policy_controller.launch  load_trot_controller.launch
legged_rl_controllers/policy/a1/: policy_1.onnx
legged_rl_controllers/policy/a1_amp_policy/: policy_1.onnx  policy_2.onnx
legged_rl_controllers/policy/a1_parkour_policy/: policy.onnx
legged_rl_controllers/src/: AmpController.cpp  BipedController.cpp  BipedVisionController.cpp  LeggedRLController.cpp  ParkourController.cpp  RLControllerBase.cpp  StudentPolicyController.cpp  TrotController.cpp
legged_rl_description/: CMakeLists.txt  package.xml
legged_rl_description/config/: default.yaml
legged_rl_description/launch/: empty_world.launch  empty_world_biped.launch  empty_world_vision.launch
legged_rl_description/urdf/: a1.urdf  aliengo.urdf  biped.urdf  gazebo_d400.xacro  lite3.urdf  robot.xacro  robot_with_camera.xacro
legged_rl_description/worlds/: empty_world.world
(+16 files in other folders)
